# incomeCalculator

./: README.md
income-calculator/: Cargo.toml
income-calculator/src/: main.rs
income-calculator/ui/: appwindow.slint
