[package]
name = "income-calculator"
version = "0.1.0"
authors = ["Alexander Ferreira <Alex.Ferreira@phronesis.net>"]
edition = "2021"
build = "build.rs"
description = "A desktop app that divides up income"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.3"

[build-dependencies]
slint-build = "1.3"

[package.metadata.bundle]
name = "Income Divider"
identifier = "io.github.SniffleSneeze.incomeCalculator"
